# FlickMe

./: .gitmodules  README.md  package.json
MoviesData/: app.ts  package.json
MoviesData-py/: makefile  package-lock.json  pyproject.toml
MoviesData-py/moviesdata_py/: main.py
MoviesData-py/tests/: test_moviesdata_py.py
old-front end/: package-lock.json  package.json
old-front end/public/: index.html
old-front end/src/: App.js
old-front end/src/Mock/: index.html  movie.html
old-front end/src/Mock/styles/: index.css  movie.css
old-front end/src/config/: config.js
