[tool.poetry]
name = "MoviesData-py"
version = "0.1.0"
description = ""
authors = ["Adam Yodinsky <adam.yodinsky@autodesk.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tmdbsimple = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
